Update Principal.java
Deleted import collectors